--- a/General_Info.html
+++ b/General_Info.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<!-- Made By Anoojen -->
+		<title>General_Info</title>
 		<link rel="stylesheet" href="css/style1.css">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet"> 
 		<meta charset="UTF-8">
@@ -11,26 +12,26 @@
 			<p>RAM</p>
 			<ul>
 				<li><a href="index.html">Home</a></li>
-				<li><a>General Info</a></li>
+				<li><a href="General_Info.html">General Info</a></li>
 				<li><a href="ddr.html">DDR</a>
 					<ul>
-						<li><a href="ddr.html #history">History</a></li>
-						<li><a href="ddr.html #uses">Uses</a></li>
-						<li><a href="ddr.html #about">About</a></li>
+						<li><a href="ddr.html#history">History</a></li>
+						<li><a href="ddr.html#uses">Uses</a></li>
+						<li><a href="ddr.html#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="lpddr.html">LPDDR</a>
 					<ul>
-						<li><a href="lpddr.html #history">History</a></li>
-						<li><a href="lpddr.html #uses">Uses</a></li>
-						<li><a href="lpddr.html #about">About</a></li>
+						<li><a href="lpddr.html#history">History</a></li>
+						<li><a href="lpddr.html#uses">Uses</a></li>
+						<li><a href="lpddr.html#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="gddr.html">GDDR</a>
 					<ul>
-						<li><a href="gddr.html #history">History</a></li>
-						<li><a href="gddr.html #uses">Uses</a></li>
-						<li><a href="gddr.html #about">About</a></li>
+						<li><a href="gddr.html#history">History</a></li>
+						<li><a href="gddr.html#uses">Uses</a></li>
+						<li><a href="gddr.html#about">About</a></li>
 					</ul>
 				</li>
 			</ul>
