--- a/ddr.html
+++ b/ddr.html
@@ -13,25 +13,25 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="General_Info.html">General Info</a></li>
-				<li><a href="ddr.html">DDR</a>
+				<li><a>DDR</a>
 					<ul>
-						<li><a href="ddr.html #history">History</a></li>
-						<li><a href="ddr.html #uses">Uses</a></li>
-						<li><a href="ddr.html #about">About</a></li>
+						<li><a href="#history">History</a></li>
+						<li><a href="#uses">Uses</a></li>
+						<li><a href="#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="lpddr.html">LPDDR</a>
 					<ul>
-						<li><a href="lpddr.html #history">History</a></li>
-						<li><a href="lpddr.html #uses">Uses</a></li>
-						<li><a href="lpddr.html #about">About</a></li>
+						<li><a href="lpddr.html#history">History</a></li>
+						<li><a href="lpddr.html#uses">Uses</a></li>
+						<li><a href="lpddr.html#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="gddr.html">GDDR</a>
 					<ul>
-						<li><a href="gddr.html #history">History</a></li>
-						<li><a href="gddr.html #uses">Uses</a></li>
-						<li><a href="gddr.html #about">About</a></li>
+						<li><a href="gddr.html#history">History</a></li>
+						<li><a href="gddr.html#uses">Uses</a></li>
+						<li><a href="gddr.html#about">About</a></li>
 					</ul>
 				</li>
 			</ul>
