--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<!-- Made By Anoojen -->
-		<title>My First Webpage </title>
+		<title>Information About Ram</title>
 		<meta charset="UTF-8">
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap" rel="stylesheet"> 
 		<link rel = "stylesheet" href = "css/style.css">
@@ -15,23 +15,23 @@
 				<li><a href="General_Info.html">General Info</a></li>
 				<li><a href="ddr.html">DDR</a>
 					<ul>
-						<li><a href="ddr.html #history">History</a></li>
-						<li><a href="ddr.html #uses">Uses</a></li>
-						<li><a href="ddr.html #about">About</a></li>
+						<li><a href="ddr.html#history">History</a></li>
+						<li><a href="ddr.html#uses">Uses</a></li>
+						<li><a href="ddr.html#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="lpddr.html">LPDDR</a>
 					<ul>
-						<li><a href="lpddr.html #history">History</a></li>
-						<li><a href="lpddr.html #uses">Uses</a></li>
-						<li><a href="lpddr.html #about">About</a></li>
+						<li><a href="lpddr.html#history">History</a></li>
+						<li><a href="lpddr.html#uses">Uses</a></li>
+						<li><a href="lpddr.html#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="gddr.html">GDDR</a>
 					<ul>
-						<li><a href="gddr.html #history">History</a></li>
-						<li><a href="gddr.html #uses">Uses</a></li>
-						<li><a href="gddr.html #about">About</a></li>
+						<li><a href="gddr.html#history">History</a></li>
+						<li><a href="gddr.html#uses">Uses</a></li>
+						<li><a href="gddr.html#about">About</a></li>
 					</ul>
 				</li>
 			</ul>
