--- a/gddr.html
+++ b/gddr.html
@@ -22,16 +22,16 @@
 				</li>
 				<li><a>LPDDR</a>
 					<ul>
-						<li><a href="#history">History</a></li>
-						<li><a href="#uses">Uses</a></li>
-						<li><a href="#about">About</a></li>
+						<li><a href="lpddr.html#history">History</a></li>
+						<li><a href="lpddr.html#uses">Uses</a></li>
+						<li><a href="lppdr.html#about">About</a></li>
 					</ul>
 				</li>
 				<li><a href="gddr.html">GDDR</a>
 					<ul>
-						<li><a href="gddr.html#history">History</a></li>
-						<li><a href="gddr.html#uses">Uses</a></li>
-						<li><a href="gddr.html#about">About</a></li>
+						<li><a href="#history">History</a></li>
+						<li><a href="#uses">Uses</a></li>
+						<li><a href="#about">About</a></li>
 					</ul>
 				</li>
 			</ul>
