--- a/lpddr.html
+++ b/lpddr.html
@@ -20,14 +20,14 @@
 						<li><a href="ddr.html#about">About</a></li>
 					</ul>
 				</li>
-				<li><a href="lpddr.html">LPDDR</a>
+				<li><a>LPDDR</a>
 					<ul>
 						<li><a href="#history">History</a></li>
 						<li><a href="#uses">Uses</a></li>
 						<li><a href="#about">About</a></li>
 					</ul>
 				</li>
-				<li><a>GDDR</a>
+				<li><a href="gddr.html">GDDR</a>
 					<ul>
 						<li><a href="gddr.html#history">History</a></li>
 						<li><a href="gddr.html#uses">Uses</a></li>
