--- a/gddr.html
+++ b/gddr.html
@@ -20,14 +20,14 @@
 						<li><a href="ddr.html#about">About</a></li>
 					</ul>
 				</li>
-				<li><a>LPDDR</a>
+				<li><a href="lpddr.html">LPDDR</a>
 					<ul>
 						<li><a href="lpddr.html#history">History</a></li>
 						<li><a href="lpddr.html#uses">Uses</a></li>
-						<li><a href="lppdr.html#about">About</a></li>
+						<li><a href="lpddr.html#about">About</a></li>
 					</ul>
 				</li>
-				<li><a href="gddr.html">GDDR</a>
+				<li><a>GDDR</a>
 					<ul>
 						<li><a href="#history">History</a></li>
 						<li><a href="#uses">Uses</a></li>
